MyProject/force-app/main/default/objects/Patient__c/fields/Appointment_Cancel_Reason__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Cancel_Reason__c</fullName>
    <label>Appointment Cancel Reason</label>
    <length>55</length>
    <type>Text</type>
</CustomField>