MyProject/force-app/main/default/objects/Patient__c/fields/Appointment_Number__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appointment Number</label>
    <referenceTo>Appointment__c</referenceTo>
    <relationshipLabel>Patients</relationshipLabel>
    <relationshipName>Patients</relationshipName>
    <type>Lookup</type>
</CustomField>