MyProject/force-app/main/default/objects/Patient__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Appointment_Cancel_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>